[package]
name = "mvt-wrangler"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
bytes = "1.4"
clap = { version = "4", features = ["derive"] }
deadpool = { version = "0.12.2", features = ["rt_tokio_1"] }
flate2 = "1.1.2"
flume = { version = "0.11.1", features = ["async"] }
futures = "0.3.31"
geo = "0.30"
geo-types = "0.7"
geojson = "0.24.2"
geozero = { version = "0.14", features = ["with-mvt"] }
indicatif = "0.17.11"
num_cpus = "1.16.0"
# pmtiles = { git = "https://github.com/KotobaMedia/pmtiles-rs.git", branch = "enumerate-entries", features = ["mmap-async-tokio", "tilejson"] }
# pmtiles = { path = "../pmtiles-rs", features = ["mmap-async-tokio", "tilejson"] }
pmtiles = { version = "0.15", features = ["mmap-async-tokio", "tilejson", "iter-async"] }
prost = "0.11"
rayon = "1.11.0"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
