[package]
name = "mvt-wrangler"
description = "A high-performance Rust tool for processing and transforming Mapbox Vector Tiles (MVT) with advanced filtering capabilities. Apply sophisticated spatial and attribute-based filters to slim down your tiles."
repository = "https://github.com/KotobaMedia/mvt-wrangler"
version = "0.1.1"
edition = "2024"
license = "MIT"
exclude = [".github", "tests"]

[dependencies]
anyhow = "1.0"
bytes = "1.4"
clap = { version = "4", features = ["derive"] }
flate2 = "1.1.2"
flume = { version = "0.11", features = ["async"] }
futures = "0.3.31"
geo = "0.30"
geo-types = "0.7"
geojson = "0.24"
geozero = { version = "0.14", features = ["with-mvt"] }
indicatif = "0.17"
num_cpus = "1"
pmtiles = { version = "0.17", default-features = false, features = ["write", "mmap-async-tokio", "tilejson", "iter-async"] }
prost = "0.11"
rayon = "1.11"
regex = "1"
rstar = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
